Update from upstream

--- a/src/main/webapp/bundle/messages.properties
+++ b/src/main/webapp/bundle/messages.properties
@@ -84,7 +84,7 @@ hdr_upload=Upload files
 hdr_edit_track=Edit Track
 hdr_howto_edit_track=How to edit tracks
 hdr_login=Login
-hdr_credits=Credits
+hdr_credits=Author
 hdr_thanks=Kudos & Thanks
 
 txt_welcome1=HikingTracks is dedicated to sharing hiking and biking tracks. You can upload your tours and pictures. You can search for hikes others have uploaded.
@@ -100,7 +100,7 @@ txt_confirmation=Are you sure?
 txt_confirm=Please confirm.
 txt_subtitle=whereever you have been...
 txt_select_provider=Please select your account provider
-txt_footer=&copy; 2013 X1
+txt_footer=&copy; 2013-2018 X1
 txt_address=Johannes Beck<br/>Rhode-Island-Allee 69<br/>76149 Karlsruhe<br/>Germany<br/>Email: <a href="mailto:mail@johannes-beck.name">mail@johannes-beck.name</a>
 txt_policy=<strong>HikingTracks</strong> is a site with no commercial interest. We will not use your email address to write you mails or hand them over to 3rd parties. People interested in your tracks and registered at HikingTracks can see your email and can contact you. We use <a href="http://oauth.net/2/">OAuth 2</a> for authentification, so we don't need a your password. The email address shown here has been provided by the provider you have chosen for login at HikingTracks. That's why you can not change or remove it.<br/>Hikingtracks uses <a href="http://www.gravatar.com">Gravatar</a> for Avatars; just follow the link and you can sign up and add your profile image.
 txt_edit_track=You can enter a name, location and date of your tour and give some notes on the highlights. If you have a KML file uploaded somewhere which we can access you can enter the URL pinting to it. Otherwise you can upload a KML file to our site. The same applies to photos or images you have made.
