--- a/src/main/webapp/bundle/messages_de.properties
+++ b/src/main/webapp/bundle/messages_de.properties
@@ -100,7 +100,7 @@ txt_confirmation=Bist du sicher?
 txt_confirm=Bitte best\u00E4tigen.
 txt_subtitle=wo immer du gewesen bist...
 txt_select_provider=W\u00E4hle deinen Account-Anbieter aus
-txt_footer=&copy; 2013 X1
+txt_footer=&copy; 2013-2018 X1
 txt_address=Johannes Beck<br/>Rhode-Island-Allee 69<br/>76149 Karlsruhe<br/>Germany<br/>Email: <a href="mailto:mail@johannes-beck.name">mail@johannes-beck.name</a>
 txt_policy=<strong>HikingTracks</strong> ist eine nicht-kommerzielle Webseite. Wir benutzen deine Email-Adresse nicht, um dir Emails zu schreiben oder sie an Dritte weiterzugeben. Leute, die sich deine Routen ansehen, k\u00F6nnen deine Email-Adresse sehen und dir Emails schreiben. Wir verwenden <a href\="http\://oauth.net/2/">OAuth 2</a> zur Anmeldung, damit wir kein Passwort von dir brauchen. Die Email-Adresse, die hier angezeigt wird, wurde uns von deinem Anbieter \u00FCbermittelt, den du f\u00FCr das Login bei HikingTracks ausgew\u00E4hlt hast. Deshalb kannst du die Email-Adresse auch nicht \u00E4ndern.<br/>Hikingtracks verwendet <a href\="http\://www.gravatar.com">Gravatar</a>, um Avatare der Anwender einzublenden; wenn du m\u00F6chtest, melde dich dort an und gib ein Bild frei.
 txt_edit_track=Gib zu deiner Tour einen Namen, den Ort und das Datum an und beschreibe die H\u00F6hepunkte. Wenn du einen KML-Datei woanders hochgeladen hast, kannst du die URL dazu hinterlegen. Andernfalls kannst du auch die KML-Datei direkt bei uns hochladen. Das gleiche gilt auch f\u00FCr Bilder, die du gemacht hast.
