Update from upstream

--- a/src/main/webapp/bundle/messages.properties
+++ b/src/main/webapp/bundle/messages.properties
@@ -89,9 +89,9 @@ hdr_thanks=Kudos & Thanks
 
 txt_welcome1=HikingTracks is dedicated to sharing hiking and biking tracks. You can upload your tours and pictures. You can search for hikes others have uploaded.
 txt_welcome2=Have fun!
-txt_kml_url=Enter URL for a new KML file
+txt_kml_url=Enter URL for a new KML or GPX file
 txt_image_url=Enter URL for a new image
-txt_kml_chooser=Select KML files to upload
+txt_kml_chooser=Select KML or GPX files to upload
 txt_image_chooser=Select Images to upload
 txt_required_input=* = required input
 txt_add_more_images=Add more images
@@ -103,7 +103,7 @@ txt_select_provider=Please select your account provider
 txt_footer=&copy; 2013-2018 X1
 txt_address=Johannes Beck<br/>Rhode-Island-Allee 69<br/>76149 Karlsruhe<br/>Germany<br/>Email: <a href="mailto:mail@johannes-beck.name">mail@johannes-beck.name</a>
 txt_policy=<strong>HikingTracks</strong> is a site with no commercial interest. We will not use your email address to write you mails or hand them over to 3rd parties. People interested in your tracks and registered at HikingTracks can see your email and can contact you. We use <a href="http://oauth.net/2/">OAuth 2</a> for authentification, so we don't need a your password. The email address shown here has been provided by the provider you have chosen for login at HikingTracks. That's why you can not change or remove it.<br/>Hikingtracks uses <a href="http://www.gravatar.com">Gravatar</a> for Avatars; just follow the link and you can sign up and add your profile image.
-txt_edit_track=You can enter a name, location and date of your tour and give some notes on the highlights. If you have a KML file uploaded somewhere which we can access you can enter the URL pinting to it. Otherwise you can upload a KML file to our site. The same applies to photos or images you have made.
+txt_edit_track=You can enter a name, location and date of your tour and give some notes on the highlights. If you have a KML or GPX file uploaded somewhere which we can access you can enter the URL pinting to it. Otherwise you can upload a KML file to our site. The same applies to photos or images you have made.
 txt_upload_data_hint=You can also <a href="#upload">upload files</a>
 txt_openid=The OAuth 2.0 authorization framework enables a third-party application to obtain limited access to an HTTP service.
 txt_north=N
