--- a/src/main/webapp/bundle/messages_de.properties
+++ b/src/main/webapp/bundle/messages_de.properties
@@ -89,9 +89,9 @@ hdr_thanks=Kudos & Danksagungen
 
 txt_welcome1=Bei HikingTracks geht es um das Teilen von Wander- und Fahhradtouren. Du kannst deine Routen und Bilder hochladen. Und du kannst nach Touren, die andere hochgeladen haben, suchen.
 txt_welcome2=Viel Spa\u00DF!
-txt_kml_url=Gib eine URL zu einer neuen KML-Datei ein
+txt_kml_url=Gib eine URL zu einer neuen KML- oder GPX-Datei ein
 txt_image_url=Gib eine URL zu einem neuen Bild ein
-txt_kml_chooser=W\u00E4hle KML-Dateien zum Hochladen aus
+txt_kml_chooser=W\u00E4hle KML- oder GPX-Dateien zum Hochladen aus
 txt_image_chooser=W\u00E4hle Bilder zum Hochladen aus
 txt_required_input=* = Pflichtfeld
 txt_add_more_images=Mehr Bilder hinzuf\u00FCgen
@@ -103,7 +103,7 @@ txt_select_provider=W\u00E4hle deinen Account-Anbieter aus
 txt_footer=&copy; 2013-2018 X1
 txt_address=Johannes Beck<br/>Rhode-Island-Allee 69<br/>76149 Karlsruhe<br/>Germany<br/>Email: <a href="mailto:mail@johannes-beck.name">mail@johannes-beck.name</a>
 txt_policy=<strong>HikingTracks</strong> ist eine nicht-kommerzielle Webseite. Wir benutzen deine Email-Adresse nicht, um dir Emails zu schreiben oder sie an Dritte weiterzugeben. Leute, die sich deine Routen ansehen, k\u00F6nnen deine Email-Adresse sehen und dir Emails schreiben. Wir verwenden <a href\="http\://oauth.net/2/">OAuth 2</a> zur Anmeldung, damit wir kein Passwort von dir brauchen. Die Email-Adresse, die hier angezeigt wird, wurde uns von deinem Anbieter \u00FCbermittelt, den du f\u00FCr das Login bei HikingTracks ausgew\u00E4hlt hast. Deshalb kannst du die Email-Adresse auch nicht \u00E4ndern.<br/>Hikingtracks verwendet <a href\="http\://www.gravatar.com">Gravatar</a>, um Avatare der Anwender einzublenden; wenn du m\u00F6chtest, melde dich dort an und gib ein Bild frei.
-txt_edit_track=Gib zu deiner Tour einen Namen, den Ort und das Datum an und beschreibe die H\u00F6hepunkte. Wenn du einen KML-Datei woanders hochgeladen hast, kannst du die URL dazu hinterlegen. Andernfalls kannst du auch die KML-Datei direkt bei uns hochladen. Das gleiche gilt auch f\u00FCr Bilder, die du gemacht hast.
+txt_edit_track=Gib zu deiner Tour einen Namen, den Ort und das Datum an und beschreibe die H\u00F6hepunkte. Wenn du einen KML- oder GPX-Datei woanders hochgeladen hast, kannst du die URL dazu hinterlegen. Andernfalls kannst du auch die KML-Datei direkt bei uns hochladen. Das gleiche gilt auch f\u00FCr Bilder, die du gemacht hast.
 txt_upload_data_hint=Du kannst auch <a href="#upload">Dateien hochladen</a>
 txt_openid=OAuth 2.0 erlaubt es einer Anwendung, begrenzten Zugriff auf einen HTTP-Dienst zu bekommen.
 txt_north=N
